--- a/index.html
+++ b/index.html
@@ -1,63 +1,65 @@
+<!doctype html>
 <html>
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <title>Hictech.github.io by hicTech</title>
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>logd.in</title>
-
-    <link rel="stylesheet" href="css/flex_layout/flex_layout.css">
-    <link rel="stylesheet" href="css/general/general.css">
-    <link rel="stylesheet" href="css/icon/glyphicons.css">
-    <link rel="stylesheet" href="css/mediaQuery/mediaQuery.css">
-    <link rel="stylesheet" href="css/button/button.css">
-
-
-
-
-
-    <script type="text/javascript" src="scripts/underscore_plus/_.js"></script>
-    <script type="text/javascript" src="scripts/underscore_plus/_plus.js"></script>
-    <script type="text/javascript" src="scripts/modernizr/modernizr.js"></script>
-    <script type="text/javascript" src="scripts/plugins/consoleTime.js"></script>
-    <script type="text/javascript" src="scripts/plugins/fastclick.min.js"></script>
-    <script type="text/javascript" src="scripts/jquery/jquery-2.0.2.js"></script>
-    <script type="text/javascript" src="scripts/plugins/debouncedResize.js"></script>
-    <script type="text/javascript" src="scripts/plugins/resize.js"></script>
-    <script type="text/javascript" src="scripts/ht/struct.js"></script>
-
-    <script type="text/javascript" src="scripts/tooltip/tooltip.js"></script>
-    <link rel="stylesheet" href="scripts/tooltip/tooltip.css">
-
-    <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Hictech.github.io</h1>
+        <p></p>
 
 
+        <p class="view"><a href="https://github.com/hicTech">View My GitHub Profile</a></p>
 
+      </header>
+      <section>
+        <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-</head>
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
 
-<body>
-    <div data-h-modules-role="dyn_module" data-h-template-name="loading" data-h-module-id="loading"></div>
-    <div data-h-modules-role="dyn_module" data-h-template-name="browser" data-h-module-id="browser"></div>
-    <div data-h-modules-role="dyn_module" data-h-template-name="effects" data-h-module-id="effects"></div>
-    <div data-h-modules-role="dyn_module" data-h-template-name="common" data-h-module-id="common"></div>
-    <div data-h-modules-role="dyn_module" data-h-template-name="app" data-h-module-id="app"></div>
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-</body>
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<script type="text/javascript" src="scripts/underscore_plus/_string.js"></script>
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<script>
-    solveDynModules($("body"));
-</script>
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
