--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@
         </div>
         <div class="footer">
             <div style="padding:30px; text-align:center">
+                <button style="margin-top:12px" class="BUTTON styled green" onclick="location.href='mailto:info@hictech.com'">Contattaci</button></br>
                  <b>HicTech srl</b></br>
                     <font style="font-size:14px">Corso Mazzini 28 - 87100 Cosenza<br>P.Iva 02945020788</font><br>
-                    <button style="margin-top:12px" class="BUTTON styled green" onclick="location.href='mailto:info@hictech.com'">Contattaci</button>
+                    <font style="font-size:12px">Iscritto Camera di commercio Cosenza - REA: 200621</font><br>
+                    <font style="font-size:12px">Capitale sociale 42.110 EUR interamente versato<br>
+                    
             </div>
         </div>
 
